--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.chonker.core": "git@github.com:ChonkerDev/Chonker-Core.git",
+    "com.h8man.2d.navmeshplus": "git@github.com:h8man/NavMeshPlus.git",
     "com.unity.2d.animation": "11.0.0",
     "com.unity.2d.aseprite": "1.2.5",
     "com.unity.2d.psdimporter": "10.1.1",
@@ -8,6 +9,7 @@
     "com.unity.2d.spriteshape": "11.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "4.3.1",
+    "com.unity.ai.navigation": "2.0.8",
     "com.unity.cinemachine": "3.1.4",
     "com.unity.collab-proxy": "2.9.2",
     "com.unity.ide.rider": "3.0.36",
