basic run anim for raccoon

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ Packages/com.unity.ide.visualstudio/
 
 # Crash reports
 sysinfo.txt
+UserSettings/EditorUserSettings.asset
+UserSettings/EditorUserSettings.asset
+UserSettings/EditorUserSettings.asset
