--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
+[Uu]serSettings/
