Enemy Logic and player detection, Scenes, Player improvements

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
 [Uu]serSettings/
+
+External/
+External.meta
+TextMesh Pro
+TextMesh Pro.meta
